--- a/app/src/main/res/layout/activity_web_service.xml
+++ b/app/src/main/res/layout/activity_web_service.xml
@@ -4,65 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".webService.WebServiceActivity">
+    tools:context=".webService.SearchActivity">
 
-    <EditText
-        android:id="@+id/login_password"
-        android:layout_width="273dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="72dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="PASSWORD:"
-        app:layout_constraintBottom_toTopOf="@+id/Login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_username" />
-
-    <EditText
-        android:id="@+id/login_username"
-        android:layout_width="273dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="97dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="55dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="USERNAME:"
-        app:layout_constraintBottom_toTopOf="@+id/login_password"
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_cat_images"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Login"
+        android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="183dp"
-        android:layout_marginBottom="29dp"
-        android:text="login"
-        app:layout_constraintBottom_toTopOf="@+id/login_register"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_password" />
-
-    <Button
-        android:id="@+id/login_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="143dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="174dp"
-        android:layout_marginBottom="249dp"
-        android:text="register here"
+        android:text="@string/search"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Login" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
