layout commit from Baoyan

--- a/app/src/main/res/layout/activity_firebase_database.xml
+++ b/app/src/main/res/layout/activity_firebase_database.xml
@@ -6,16 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".firebase.FirebaseDBActivity">
 
-    <TextView
-        android:id="@+id/web"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Waiting for the implemention"
-        android:textStyle="bold"
-        android:textSize="30sp"
+    <Button
+        android:id="@+id/firebase_register"
+        android:layout_width="148dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="100dp"
+        android:text="@string/firebase_register"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.548" />
 
+    <EditText
+        android:id="@+id/firebase_username"
+        android:layout_width="305dp"
+        android:layout_height="69dp"
+        android:layout_marginStart="87dp"
+        android:layout_marginTop="146dp"
+        android:layout_marginEnd="87dp"
+        android:ems="10"
+        android:hint="@string/firebase_username"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/firebase_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75" />
 </androidx.constraintlayout.widget.ConstraintLayout>
