--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,10 @@
 <resources>
       <dimen name="fab_margin">16dp</dimen>
+    <dimen name="image_margin">12dp</dimen>
+    <dimen name="text_margin">6dp</dimen>
+    <dimen name="image_size_big">75dp</dimen>
+    <dimen name="image_size_small">45dp</dimen>
+    <dimen name="list_margin">16dp</dimen>
+    <dimen name="min_width">100dp</dimen>
    </resources>
+
