--- a/app/src/main/res/layout/activity_send_sticker.xml
+++ b/app/src/main/res/layout/activity_send_sticker.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".firebase.SendStickerActivity">
 
+    <TextView
+        android:id="@+id/recipientUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="256dp"
+        android:text="Recipient username"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.194"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.239" />
+
     <Button
         android:id="@+id/SendSticker_send"
         android:layout_width="127dp"
