integrate with firebase backend
* also add images in send sticker activity

--- a/app/src/main/res/layout/activity_send_sticker.xml
+++ b/app/src/main/res/layout/activity_send_sticker.xml
@@ -21,6 +21,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.239" />
 
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_width="@dimen/image_size_big"
+        android:layout_height="@dimen/image_size_big"
+        android:src="@drawable/sandwich"
+        android:clickable="true"
+        android:onClick="clickImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.193"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.105" />
+
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_width="@dimen/image_size_big"
+        android:layout_height="@dimen/image_size_big"
+        android:src="@drawable/noodles"
+        android:clickable="true"
+        android:onClick="clickImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.105" />
+
     <Button
         android:id="@+id/SendSticker_send"
         android:layout_width="127dp"
