A8 assignment about HistoryActivity.

--- a/app/src/main/res/layout-land/activity_send_sticker.xml
+++ b/app/src/main/res/layout-land/activity_send_sticker.xml
@@ -12,8 +12,8 @@
         android:layout_width="171dp"
         android:layout_height="39dp"
         android:layout_marginTop="25dp"
-        android:text="Send to:"
-        android:textColor="@color/black"
+        android:text="@string/send_to"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -53,6 +53,7 @@
         android:layout_width="117dp"
         android:layout_height="106dp"
         android:clickable="true"
+        android:contentDescription="@string/firebase_database"
         android:onClick="clickImage"
         android:src="@drawable/polar_bear"
         app:layout_constraintBottom_toBottomOf="parent"
