A8: update layout color

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/receivedView"
+        android:id="@+id/receivedStickers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/text_margin"
@@ -33,7 +33,7 @@
         android:textSize="20sp"
         android:minWidth="@dimen/min_width"
         app:layout_constraintBottom_toTopOf="@id/receivedHistoryRV"
-        app:layout_constraintStart_toEndOf="@id/receivedView"
+        app:layout_constraintStart_toEndOf="@id/receivedStickers"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -59,6 +59,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/receivedView" />
+        app:layout_constraintTop_toBottomOf="@id/receivedStickers" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
