--- a/app/src/main/res/layout/activity_send_sticker.xml
+++ b/app/src/main/res/layout/activity_send_sticker.xml
@@ -73,6 +73,9 @@
         android:layout_marginEnd="255dp"
         android:layout_marginBottom="260dp"
         android:text="@string/sendSticker_send"
+        android:backgroundTint="#AE4D8B"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:onClick="sendSticker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +91,9 @@
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="259dp"
         android:text="@string/sendSticker_Check"
+        android:backgroundTint="#AE4D8B"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:onClick="showHistory"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
