--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:hint="@string/username"
         android:inputType="text"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,13 +31,17 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="100dp"
-        android:text="@string/login"
         android:onClick="login"
+        android:text="@string/login"
+        android:backgroundTint="#AE4D8B"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.548" />
+        app:layout_constraintVertical_bias="0.548"
+        app:strokeColor="#03A9F4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
