--- a/app/src/main/res/layout/activity_group_project.xml
+++ b/app/src/main/res/layout/activity_group_project.xml
@@ -41,7 +41,7 @@
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/design_default_color_primary"
             android:fontFamily="monospace"
-            android:text="log in"
+            android:text="register"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
